# sane-contractions

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  README.md  README.rst  UV_USAGE.md  deploy.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-tag.yml  commit.yml  publish.yml
contractions/: __init__.py  api.py  bootstrap.py  core.py  data_io.py  dict_builders.py  emoji_support.py  extension.py  extensions.py  file_loader.py  loaders.py  matcher.py  matchers.py  processor.py  state.py  transformer.py  validation.py
contractions/data/: emoji_dict.json  emoticon_dict.json  slang_dict.json
stubs/textsearch/: __init__.pyi
tests/: test_contractions.py  test_emoji_support.py  test_file_loader.py  test_performance.py  test_resources.py  test_validation.py
