[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "contractions._version.__version__"}

[project]
name = "sane-contractions"
dynamic = ["version"]
description = "Enhanced fork of contractions library - Expands English contractions with improved performance and new features"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jeremy Bruns", email = "99199491+devjerry0@users.noreply.github.com"},
]
maintainers = [
    {name = "Jeremy Bruns", email = "99199491+devjerry0@users.noreply.github.com"},
]
keywords = ["contractions", "nlp", "text-processing", "slang", "text-expansion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "textsearch>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/devjerry0/sane-contractions"
Documentation = "https://github.com/devjerry0/sane-contractions#readme"
Repository = "https://github.com/devjerry0/sane-contractions.git"
"Bug Tracker" = "https://github.com/devjerry0/sane-contractions/issues"
"Original Project" = "https://github.com/kootenpv/contractions"

[tool.mypy]
python_version = "3.10"
mypy_path = "stubs"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM", "PL"]
ignore = ["PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]

[tool.coverage.run]
source = ["contractions"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

